Infra/Ansible/files/ingress-irviquiz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: irviquiz-ingress
  namespace: irviquiz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: irviquiz-web
                port:
                  number: 80
